--- a/syle.css
+++ b/syle.css
@@ -7,7 +7,9 @@
     color: rgb(215, 215, 215);
     background-color: rgb(47, 47, 47);
 }
-
+a{
+    text-decoration: none;
+}
 p{
     font-size: 14px;
 }
